# tinymath

./: .gitignore  Doxyfile  justfile  meson.build
include/: tinyadd.h  tinyrand.h
src/: tinyadd.c  tinyrand.c
test/: test_tinyadd.c  test_tinyrand.c
